Update services structure, components, and assets for production deployment

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <meta property="og:title" content="Vraxlor - AI Solutions & Intelligent Automation" />
   <meta property="og:description"
     content="Building intelligent AI agents and automation systems for the future of business." />
+  <meta property="og:image" content="https://vraxlor.com/logo.png" />
   <meta property="og:site_name" content="Vraxlor" />
 
   <!-- Twitter -->
